# AliaseAgent

./: .gitignore  README.md  pubspec.yaml
.claude/skills/git-commit/: SKILL.md
Docs/: AnthropicAPIDoc.md  DeepSeekAPIDoc.md
lib/: main.dart
lib/models/: agent_type_config.dart  app_config.dart  message.dart  provider_config.dart  session.dart
lib/services/: agent_type_registry.dart  config_service.dart  database_service.dart  message_repository.dart  provider_resolver.dart  session_repository.dart  sidecar_bridge.dart
lib/ui/: chat_area.dart  message_bubble.dart  session_sidebar.dart  setup_dialog.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
openspec/changes/archive/2026-05-14-explore-agent-framework/: proposal.md
openspec/changes/chat-agent-window/: design.md  proposal.md  tasks.md
openspec/changes/chat-agent-window/specs/agent-config/: spec.md
openspec/changes/chat-agent-window/specs/basic-tools/: spec.md
openspec/changes/chat-agent-window/specs/chat-ui/: spec.md
sidecar/: CMakeLists.txt
sidecar/include/: sidecar_api.h
sidecar/src/: logger.cpp  logger.h  model_gateway.cpp  model_gateway.h  sidecar_api.cpp  tools.cpp  tools.h
test/: checkpoint_2_verify.dart  checkpoint_3_verify.dart  checkpoint_4_verify.dart  checkpoint_5_verify.dart  checkpoint_6_verify.dart  checkpoint_9_verify.dart  widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
